Refs #3158 #3227  * Fixing encoding bugs. We never noticed but there was a bug in the code (see change in XML files which are now correct).  * Display Between X and Y even when values are the same (otherwise it looks like there's a bug)  * fixing other tests I'm SO glad we have nice tests coverage for this complicated code otherwise we would be totally screwed!
git-svn-id: http://dev.piwik.org/svn/trunk@7064 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/tests/integration/expected/test_ecommerceOrderWithItems_scheduled_report_in_html_tables_only__PDFReports.generateReport_week.original.html
+++ b/tests/integration/expected/test_ecommerceOrderWithItems_scheduled_report_in_html_tables_only__PDFReports.generateReport_week.original.html
@@ -3591,19 +3591,11 @@ Back to top
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Outlinks
 </h2>
-There is no data for this report.
-<br/>
-<a style="text-decoration:none; color: rgb(126,115,99); font-size: 9pt" href="#reportTop">
-Back to top
-</a><a name ="Actions_getDownloads"/>
+There is no data for this report.<a name ="Actions_getDownloads"/>
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Downloads
 </h2>
-There is no data for this report.
-<br/>
-<a style="text-decoration:none; color: rgb(126,115,99); font-size: 9pt" href="#reportTop">
-Back to top
-</a><a name ="Referers_getRefererType"/>
+There is no data for this report.<a name ="Referers_getRefererType"/>
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Referrer Type
 </h2>
@@ -3664,35 +3656,19 @@ Back to top
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Keywords
 </h2>
-There is no data for this report.
-<br/>
-<a style="text-decoration:none; color: rgb(126,115,99); font-size: 9pt" href="#reportTop">
-Back to top
-</a><a name ="Referers_getWebsites"/>
+There is no data for this report.<a name ="Referers_getWebsites"/>
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Websites
 </h2>
-There is no data for this report.
-<br/>
-<a style="text-decoration:none; color: rgb(126,115,99); font-size: 9pt" href="#reportTop">
-Back to top
-</a><a name ="Referers_getSearchEngines"/>
+There is no data for this report.<a name ="Referers_getSearchEngines"/>
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Search Engines
 </h2>
-There is no data for this report.
-<br/>
-<a style="text-decoration:none; color: rgb(126,115,99); font-size: 9pt" href="#reportTop">
-Back to top
-</a><a name ="Referers_getCampaigns"/>
+There is no data for this report.<a name ="Referers_getCampaigns"/>
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Campaigns
 </h2>
-There is no data for this report.
-<br/>
-<a style="text-decoration:none; color: rgb(126,115,99); font-size: 9pt" href="#reportTop">
-Back to top
-</a><a name ="Goals_get"/>
+There is no data for this report.<a name ="Goals_get"/>
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Goals
 </h2>
