--- a/tests/integration/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__PDFReports.generateReport_month.original.html
+++ b/tests/integration/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__PDFReports.generateReport_month.original.html
@@ -2272,19 +2272,11 @@ Back to top
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Outlinks
 </h2>
-There is no data for this report.
-<br/>
-<a style="text-decoration:none; color: rgb(126,115,99); font-size: 9pt" href="#reportTop">
-Back to top
-</a><a name ="Actions_getDownloads"/>
+There is no data for this report.<a name ="Actions_getDownloads"/>
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Downloads
 </h2>
-There is no data for this report.
-<br/>
-<a style="text-decoration:none; color: rgb(126,115,99); font-size: 9pt" href="#reportTop">
-Back to top
-</a><a name ="Referers_getRefererType"/>
+There is no data for this report.<a name ="Referers_getRefererType"/>
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Referrer Type
 </h2>
@@ -2368,11 +2360,7 @@ Back to top
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Keywords
 </h2>
-There is no data for this report.
-<br/>
-<a style="text-decoration:none; color: rgb(126,115,99); font-size: 9pt" href="#reportTop">
-Back to top
-</a><a name ="Referers_getWebsites"/>
+There is no data for this report.<a name ="Referers_getWebsites"/>
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Websites
 </h2>
@@ -2433,19 +2421,11 @@ Back to top
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Search Engines
 </h2>
-There is no data for this report.
-<br/>
-<a style="text-decoration:none; color: rgb(126,115,99); font-size: 9pt" href="#reportTop">
-Back to top
-</a><a name ="Referers_getCampaigns"/>
+There is no data for this report.<a name ="Referers_getCampaigns"/>
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Campaigns
 </h2>
-There is no data for this report.
-<br/>
-<a style="text-decoration:none; color: rgb(126,115,99); font-size: 9pt" href="#reportTop">
-Back to top
-</a><a name ="Goals_get"/>
+There is no data for this report.<a name ="Goals_get"/>
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Goals
 </h2>
@@ -2500,19 +2480,11 @@ Back to top
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Visits to Conversion
 </h2>
-There is no data for this report.
-<br/>
-<a style="text-decoration:none; color: rgb(126,115,99); font-size: 9pt" href="#reportTop">
-Back to top
-</a><a name ="Goals_getDaysToConversion"/>
+There is no data for this report.<a name ="Goals_getDaysToConversion"/>
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Days to Conversion
 </h2>
-There is no data for this report.
-<br/>
-<a style="text-decoration:none; color: rgb(126,115,99); font-size: 9pt" href="#reportTop">
-Back to top
-</a><a name ="UserCountry_getCountry"/>
+There is no data for this report.<a name ="UserCountry_getCountry"/>
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Country
 </h2>
@@ -2631,11 +2603,7 @@ Back to top
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Custom Variables
 </h2>
-There is no data for this report.
-<br/>
-<a style="text-decoration:none; color: rgb(126,115,99); font-size: 9pt" href="#reportTop">
-Back to top
-</a><a name ="VisitorInterest_getNumberOfVisitsPerVisitDuration"/>
+There is no data for this report.<a name ="VisitorInterest_getNumberOfVisitsPerVisitDuration"/>
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Length of Visits
 </h2>
