Refs #1823, modified UserCountry plugin to allow use of GeoIP databases if desired. Added two reports, getVisitsByRegion + getVisitsByCity.
Notes:

  * Supports country, region, city, org & isp GeoIP databases.
  * Supports GeoIP PHP API, PECL module & server modules.
  * Added ability to regenerate 'general' tracker cache.
  * Removed location_continent column from log_visit & log_conversion tables, and removed visits by continent blob record. Report is now a view over country report.



git-svn-id: http://dev.piwik.org/svn/trunk@7122 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/tests/integration/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__PDFReports.generateReport_month.original.html
+++ b/tests/integration/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__PDFReports.generateReport_month.original.html
@@ -136,6 +136,16 @@ Continent
 </a>
 </li>
 <li>
+<a href="#UserCountry_getVisitsByRegion" style="text-decoration:none; color: rgb(68,68,68);">
+Region
+</a>
+</li>
+<li>
+<a href="#UserCountry_getVisitsByCity" style="text-decoration:none; color: rgb(68,68,68);">
+City
+</a>
+</li>
+<li>
 <a href="#CustomVariables_getCustomVariables" style="text-decoration:none; color: rgb(68,68,68);">
 Custom Variables
 </a>
@@ -2574,6 +2584,122 @@ Continent
 <tr style="">
 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
 Europe
+</td>
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+3
+</td>
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+8
+</td>
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+2.67
+</td>
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+00:07:01
+</td>
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+33.33%
+</td>
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+$ 0
+</td>
+</tr>
+</tbody>
+</table>
+<br/>
+<a style="text-decoration:none; color: rgb(126,115,99); font-size: 9pt" href="#reportTop">
+Back to top
+</a><a name ="UserCountry_getVisitsByRegion"/>
+<h2 style="color: rgb(126,115,99); font-size: 11pt;">
+Region
+</h2>
+<table style="border-collapse:collapse; margin-left: 5px">
+<thead style="background-color: rgb(228,226,215); color: rgb(37,87,146); font-size: 11pt;">
+<th style="padding: 6px 0;">
+&nbsp;Region&nbsp;&nbsp;
+</th>
+<th style="padding: 6px 0;">
+&nbsp;Visits&nbsp;&nbsp;
+</th>
+<th style="padding: 6px 0;">
+&nbsp;Actions&nbsp;&nbsp;
+</th>
+<th style="padding: 6px 0;">
+&nbsp;Actions per Visit&nbsp;&nbsp;
+</th>
+<th style="padding: 6px 0;">
+&nbsp;Avg. Time on Website&nbsp;&nbsp;
+</th>
+<th style="padding: 6px 0;">
+&nbsp;Bounce Rate&nbsp;&nbsp;
+</th>
+<th style="padding: 6px 0;">
+&nbsp;Revenue&nbsp;&nbsp;
+</th>
+</thead>
+<tbody>
+<tr style="">
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+<img src='plugins/UserCountry/flags/fr.png'>&nbsp;
+Unknown, France
+</td>
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+3
+</td>
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+8
+</td>
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+2.67
+</td>
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+00:07:01
+</td>
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+33.33%
+</td>
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+$ 0
+</td>
+</tr>
+</tbody>
+</table>
+<br/>
+<a style="text-decoration:none; color: rgb(126,115,99); font-size: 9pt" href="#reportTop">
+Back to top
+</a><a name ="UserCountry_getVisitsByCity"/>
+<h2 style="color: rgb(126,115,99); font-size: 11pt;">
+City
+</h2>
+<table style="border-collapse:collapse; margin-left: 5px">
+<thead style="background-color: rgb(228,226,215); color: rgb(37,87,146); font-size: 11pt;">
+<th style="padding: 6px 0;">
+&nbsp;City&nbsp;&nbsp;
+</th>
+<th style="padding: 6px 0;">
+&nbsp;Visits&nbsp;&nbsp;
+</th>
+<th style="padding: 6px 0;">
+&nbsp;Actions&nbsp;&nbsp;
+</th>
+<th style="padding: 6px 0;">
+&nbsp;Actions per Visit&nbsp;&nbsp;
+</th>
+<th style="padding: 6px 0;">
+&nbsp;Avg. Time on Website&nbsp;&nbsp;
+</th>
+<th style="padding: 6px 0;">
+&nbsp;Bounce Rate&nbsp;&nbsp;
+</th>
+<th style="padding: 6px 0;">
+&nbsp;Revenue&nbsp;&nbsp;
+</th>
+</thead>
+<tbody>
+<tr style="">
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+<img src='plugins/UserCountry/flags/fr.png'>&nbsp;
+Unknown, Unknown, France
 </td>
 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
 3
