Refs #1823, several changes & tweaks to GeoIP modifications:
  * Renamed getVisitsByCity & getVisitsByRegion to getCity & getRegion.
  * Extra testing for anonymized IPs.
  * Show visitor city & region in visitor log & last visits widget.
  * Do specific check for apache module in checking for server based geoip implementation.
  * Fix for continent segment error.
  * Redesigned admin UI to be more compact & to show reason for broken implementations.
  * Don't show duplicate Unknowns in pretty location strings.
  * Don't use REMOTE_ADDR, instead get IP from Piwik_IP.


git-svn-id: http://dev.piwik.org/svn/trunk@7140 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/tests/integration/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__PDFReports.generateReport_month.original.html
+++ b/tests/integration/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__PDFReports.generateReport_month.original.html
@@ -136,12 +136,12 @@ Continent
 </a>
 </li>
 <li>
-<a href="#UserCountry_getVisitsByRegion" style="text-decoration:none; color: rgb(68,68,68);">
+<a href="#UserCountry_getRegion" style="text-decoration:none; color: rgb(68,68,68);">
 Region
 </a>
 </li>
 <li>
-<a href="#UserCountry_getVisitsByCity" style="text-decoration:none; color: rgb(68,68,68);">
+<a href="#UserCountry_getCity" style="text-decoration:none; color: rgb(68,68,68);">
 City
 </a>
 </li>
@@ -2609,7 +2609,7 @@ $ 0
 <br/>
 <a style="text-decoration:none; color: rgb(126,115,99); font-size: 9pt" href="#reportTop">
 Back to top
-</a><a name ="UserCountry_getVisitsByRegion"/>
+</a><a name ="UserCountry_getRegion"/>
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Region
 </h2>
@@ -2667,7 +2667,7 @@ $ 0
 <br/>
 <a style="text-decoration:none; color: rgb(126,115,99); font-size: 9pt" href="#reportTop">
 Back to top
-</a><a name ="UserCountry_getVisitsByCity"/>
+</a><a name ="UserCountry_getCity"/>
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 City
 </h2>
@@ -2699,7 +2699,7 @@ City
 <tr style="">
 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
 <img src='plugins/UserCountry/flags/fr.png'>&nbsp;
-Unknown, Unknown, France
+Unknown, France
 </td>
 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
 3
