--- a/tests/integration/expected/test_ecommerceOrderWithItems_scheduled_report_in_html_tables_only__PDFReports.generateReport_week.original.html
+++ b/tests/integration/expected/test_ecommerceOrderWithItems_scheduled_report_in_html_tables_only__PDFReports.generateReport_week.original.html
@@ -3146,6 +3146,22 @@ Unique Outlinks
 0
 </td>
 </tr>
+<tr style="">
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+Searches
+</td>
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+0
+</td>
+</tr>
+<tr style="background-color: rgb(249,250,250)">
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+Unique Keywords
+</td>
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+0
+</td>
+</tr>
 </tbody>
 </table>
 <br/>
@@ -4521,8 +4537,8 @@ Region
 <tbody>
 <tr style="">
 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-<img src='plugins/UserCountry/flags/fr.png'>&nbsp;
-Unknown, France
+<img src='plugins/UserCountry/flags/xx.png'>&nbsp;
+Unknown
 </td>
 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
 5
@@ -4579,8 +4595,8 @@ City
 <tbody>
 <tr style="">
 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-<img src='plugins/UserCountry/flags/fr.png'>&nbsp;
-Unknown, France
+<img src='plugins/UserCountry/flags/xx.png'>&nbsp;
+Unknown
 </td>
 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
 5
