Fixes #2791, committed codax's patch after modification. Two new reports added, getSocials & getUrlsForSocial. New utility function for DataTable called mergeSubtables added. Modified ColumnCallbackDeleteColumn filter so the function callback used can take extra parameters.
git-svn-id: http://dev.piwik.org/svn/trunk@7466 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/tests/PHPUnit/Integration/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__PDFReports.generateReport_month.original.html
+++ b/tests/PHPUnit/Integration/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__PDFReports.generateReport_month.original.html
@@ -111,6 +111,11 @@ Campaigns
 </a>
 </li>
 <li>
+<a href="#Referers_getSocials" style="text-decoration:none; color: rgb(68,68,68);">
+Social Networks
+</a>
+</li>
+<li>
 <a href="#Goals_get" style="text-decoration:none; color: rgb(68,68,68);">
 Goals
 </a>
@@ -2450,6 +2455,10 @@ Search Engines
 There is no data for this report.<a name ="Referers_getCampaigns"/>
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Campaigns
+</h2>
+There is no data for this report.<a name ="Referers_getSocials"/>
+<h2 style="color: rgb(126,115,99); font-size: 11pt;">
+Social Networks
 </h2>
 There is no data for this report.<a name ="Goals_get"/>
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
