--- a/tests/PHPUnit/Integration/expected/test_ecommerceOrderWithItems_scheduled_report_in_html_tables_only__PDFReports.generateReport_week.original.html
+++ b/tests/PHPUnit/Integration/expected/test_ecommerceOrderWithItems_scheduled_report_in_html_tables_only__PDFReports.generateReport_week.original.html
@@ -136,6 +136,11 @@ Referrer Type
 </a>
 </li>
 <li>
+<a href="#Referers_getAll" style="text-decoration:none; color: rgb(68,68,68);">
+All Referrers
+</a>
+</li>
+<li>
 <a href="#Referers_getKeywords" style="text-decoration:none; color: rgb(68,68,68);">
 Keywords
 </a>
@@ -3683,7 +3688,11 @@ $ 13361.11
 <br/>
 <a style="text-decoration:none; color: rgb(126,115,99); font-size: 9pt" href="#reportTop">
 Back to top
-</a><a name ="Referers_getKeywords"/>
+</a><a name ="Referers_getAll"/>
+<h2 style="color: rgb(126,115,99); font-size: 11pt;">
+All Referrers
+</h2>
+There is no data for this report.<a name ="Referers_getKeywords"/>
 <h2 style="color: rgb(126,115,99); font-size: 11pt;">
 Keywords
 </h2>
