--- a/tests/PHPUnit/Integration/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__PDFReports.generateReport_month.original.html
+++ b/tests/PHPUnit/Integration/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__PDFReports.generateReport_month.original.html
@@ -1883,6 +1883,9 @@ Page URLs
 <th style="padding: 6px 0;">
 &nbsp;Exit rate&nbsp;&nbsp;
 </th>
+<th style="padding: 6px 0;">
+&nbsp;Avg. generation time&nbsp;&nbsp;
+</th>
 </thead>
 <tbody>
 <tr style="">
@@ -1906,6 +1909,9 @@ Page URLs
 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
 0%
 </td>
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+00:00:00.223
+</td>
 </tr>
 <tr style="background-color: rgb(249,250,250)">
 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
@@ -1927,6 +1933,9 @@ Page URL not defined
 </td>
 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
 0%
+</td>
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+00:00:00.223
 </td>
 </tr>
 <tr style="">
@@ -1950,6 +1959,9 @@ Page URL not defined
 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
 100%
 </td>
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+00:00:00.153
+</td>
 </tr>
 <tr style="background-color: rgb(249,250,250)">
 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
@@ -1971,6 +1983,9 @@ Page URL not defined
 </td>
 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
 100%
+</td>
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+00:00:00.313
 </td>
 </tr>
 </tbody>
@@ -2116,6 +2131,9 @@ Page titles
 <th style="padding: 6px 0;">
 &nbsp;Exit rate&nbsp;&nbsp;
 </th>
+<th style="padding: 6px 0;">
+&nbsp;Avg. generation time&nbsp;&nbsp;
+</th>
 </thead>
 <tbody>
 <tr style="">
@@ -2137,6 +2155,9 @@ first page view
 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
 50%
 </td>
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+00:00:00.138
+</td>
 </tr>
 <tr style="background-color: rgb(249,250,250)">
 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
@@ -2156,6 +2177,9 @@ second visitor
 </td>
 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
 0%
+</td>
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+00:00:00.248
 </td>
 </tr>
 <tr style="">
@@ -2177,6 +2201,9 @@ Checkout
 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
 100%
 </td>
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+00:00:00.452
+</td>
 </tr>
 <tr style="background-color: rgb(249,250,250)">
 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
@@ -2196,6 +2223,9 @@ Page Name not defined
 </td>
 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
 0%
+</td>
+<td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+00:00:00.223
 </td>
 </tr>
 </tbody>
